<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <TextView
            android:id="@+id/musicWiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/musicWiki"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/musicWiki"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/welcome"/>

        <LinearLayout
            android:id="@+id/extend"
            android:layout_below="@+id/welcome"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/extendText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/extendText"/>

                <ImageButton
                    android:id="@+id/extendButton"
                    android:layout_width="32dp"
                    android:layout_height="35dp"
                    android:background="@drawable/buttons"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_up_24"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_centerHorizontal="true"
            android:id="@+id/genres"
            android:layout_below="@id/extend"
            android:layout_marginTop="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </RelativeLayout>


</ScrollView>