<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".GenrePage">

    <RelativeLayout
        android:id="@+id/Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/GenreHeader"
        android:layout_width="match_parent"
        android:padding="13dp"
        android:layout_height="400dp">

        <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="50dp"
            android:layout_alignParentStart="true"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/GenreTitle"
            android:layout_below="@id/BackButton"
            android:layout_marginTop="22dp"
            android:textSize="33sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="Genre title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/GenreInfo"
            android:layout_marginTop="13dp"
            android:textColor="@color/black"
            android:layout_below="@+id/GenreTitle"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/Tabs"
        android:layout_below="@id/GenreHeader"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/TabLayout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Albums"
                android:layout_width="wrap_content"
                android:text="@string/albums"
                android:textSize="16sp"
                android:padding="15dp"
                android:textAlignment="center"
                android:background="@color/white"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="18dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="18dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/AlbumsLine"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:padding="15dp"
                android:text="@string/albums"
                android:background="@color/black"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="18dp"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="18dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Artists"
                android:layout_width="wrap_content"
                android:text="@string/artists"
                android:padding="15dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/ArtistsLine"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:padding="15dp"
                android:text="@string/artists"
                android:background="@color/white"
                android:textColor="@color/black"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_height="2dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Tracks"
                android:layout_width="wrap_content"
                android:text="@string/tracks"
                android:textColor="@color/black"
                android:padding="15dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:background="@color/white"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="10dp"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/TracksLine"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:padding="15dp"
                android:text="@string/tracks"
                android:background="@color/white"
                android:textColor="@color/black"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="10dp"
                android:layout_height="2dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>
    </LinearLayout>

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/Tabs"
        android:id="@+id/TabView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </RelativeLayout>

</ScrollView>